# dbaas/dbaas-aggregator/src/main/java/com/netcracker/cloud/dbaas/dto/backupV2/RestoreExternalDatabaseResponse.java
@@ -1,11 +1,11 @@
 package com.netcracker.cloud.dbaas.dto.backupV2;
 
+import com.netcracker.cloud.dbaas.entity.pg.backupV2.Classifier;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 
 import java.util.List;
-import java.util.SortedMap;
 
 @Data
 @NoArgsConstructor
@@ -19,6 +19,6 @@ public class RestoreExternalDatabaseResponse {
             description = "List of database classifiers. Each classifier is a sorted map of attributes.",
             examples = "[{\"namespace\":\"namespace\", \"microserviceName\":\"microserviceName\", \"scope\":\"service\"}]"
     )
-    private List<Classifier> classifiers;
+    private List<ClassifierResponse> classifiers;
 }
 
