# dbaas/dbaas-aggregator/src/main/java/com/netcracker/cloud/dbaas/entity/dto/backupV2/BackupDatabaseDelegate.java
@@ -1,10 +1,9 @@
 package com.netcracker.cloud.dbaas.entity.dto.backupV2;
 
-import com.netcracker.cloud.dbaas.dto.backupV2.Classifier;
+import com.netcracker.cloud.dbaas.entity.pg.backupV2.Classifier;
 import com.netcracker.cloud.dbaas.entity.pg.backupV2.BackupDatabase;
 
 import java.util.List;
-import java.util.SortedMap;
 
 
 public record BackupDatabaseDelegate(BackupDatabase backupDatabase,
