# dbaas/dbaas-aggregator/src/main/java/com/netcracker/cloud/dbaas/entity/dto/backupV2/BackupExternalDelegate.java
@@ -1,6 +1,6 @@
 package com.netcracker.cloud.dbaas.entity.dto.backupV2;
 
-import com.netcracker.cloud.dbaas.dto.backupV2.Classifier;
+import com.netcracker.cloud.dbaas.entity.pg.backupV2.Classifier;
 import com.netcracker.cloud.dbaas.entity.pg.backupV2.BackupExternalDatabase;
 
 import java.util.List;
